add feature filter and sort data
